--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -16,7 +16,7 @@
 
           <div class="card-body">
             <h4 class="cart-title mb-4">Billing Address</h4>
-            <form action="{% url 'checkout' %}" method="POST">
+            <form action="{% url 'place_order' %}" method="POST">
               {% csrf_token %}
               <div class="form-row">
                 <div class="col form-group">
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col form-group">
                   <label for="phone_number">Phone Number</label>
-                  <input type="text" name="phone_number" id="phone_number" class="form-control" required>
+                  <input type="text" name="phone" id="phone_number" class="form-control" required>
                 </div>
               </div>
               <div class="form-row">
